syntax = "proto3";

package order;

option go_package = "./orderpb";


service OrderService{
    rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
    rpc ListOrders(Empty) returns (OrderList);
}


message CreateOrderRequest{
    string product_id =1;
    int32 quantity = 2;

}


message CreateOrderResponse{
    string id =1;
    string message = 2;

}

message Order{
    string id= 1;
    string product_id = 2;
    int32 quantity = 3;
}

message OrderList{
    repeated Order orders = 1;
}

message Empty{}